# Talaria

./: .gitignore  AuthKey_LL6G8B8SV5.p8  CLAUDE.md  MAINTAINER_NOTES.md  MODELS_SETTINGS_HANDOFF.md  OPEN_ITEMS.md  PHASE_B_HANDOFF.md  README.md  SENSOR_DEBUG_HANDOFF.md  SENSOR_DEBUG_HANDOFF_R2.md  T3_SETTINGS_PROMPT.md  app-description.md  blueprint.md  build-evidence.json  build-log.md  currentlybuilt.md  project.yml
HermesMobile/: AppEntry.swift  ContentView.swift
HermesMobile.xcodeproj/: project.pbxproj
HermesMobileTests/: AppStoresTests.swift  AppTemplateTests.swift
HermesMobileUITests/: AppTemplateUITests.swift
HermesMobileWidgets/: HermesHealthWidget.swift  HermesLiveActivity.swift  HermesStatusWidget.swift
Shared/: ThemePaletteCore.swift
Talaria/: AppEntry.swift  ContentView.swift
Talaria.xcodeproj/: project.pbxproj
TalariaTests/: AppIconCatalogTests.swift  AppStoresTests.swift  AppTemplateTests.swift  DesignThemeTests.swift  ThemeArtDirectionTests.swift  ThemeCatalogTests.swift
TalariaWidgets/: HermesStatusWidget.swift  (+2 more)
relay/: .dockerignore  .env.example  README.md  docker-compose.yml  fly.toml  pyproject.toml
relay/app/: __init__.py  admin.py  apns.py  config.py  database.py  gateway.py  hermes_adapter.py  main.py  models.py  pairing.py  schemas.py  security.py  services.py  talk_mcp.py
relay/docs/: APNS_OJAMD.md  DEPLOY_OJAMD.md  fly-io.md  local-dev.md
relay/tests/: test_agent_files.py  test_api.py  test_config.py  test_hermes_adapter.py  test_hosts.py  test_pairing.py  test_push_watch.py  test_storage.py  test_streaming.py
(+216 files in other folders)
